In principle, extract_range.R works just fine. I am including example data from the Century software itself as a data set. TODO.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(century_file)
 export(century_list100)
 export(century_read_lis)
+export(century_run)
 export(century_weather)
 export(check_natural)
+export(check_numeric_character)
 export(check_overwrite)
 export(find_extension)
