Added *.100 files to the inst/extdata folder. read_100.R works. TODO: modify write_100.R to make it more coherent with read_100.R.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_natural)
 export(check_numeric_character)
 export(check_overwrite)
 export(find_extension)
+export(read_100)
 export(read_schedule)
 export(write_100)
 export(write_schedule)
