--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ export(century_list100)
 export(century_read_lis)
 export(century_run)
 export(century_weather)
+export(check_fields)
 export(check_natural)
 export(check_numeric_character)
 export(check_overwrite)
+export(check_path_filename)
 export(find_extension)
 export(read_100)
+export(read_century_files)
 export(read_schedule)
 export(write_100)
 export(write_schedule)
