--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(check_fields)
 export(check_natural)
 export(check_numeric_character)
 export(check_overwrite)
+export(check_path_file)
 export(find_extension)
 export(read_100)
 export(read_century_files)
@@ -17,4 +18,5 @@ export(read_site)
 export(read_weather)
 export(write_100)
 export(write_schedule)
+export(write_site)
 export(write_weather)
