Some files have been removed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,11 @@
 export(century_list100)
 export(century_read_lis)
 export(century_run)
-export(century_weather)
-export(check_ext)
 export(check_fields)
-export(check_natural)
-export(check_numeric_character)
 export(check_overwrite)
 export(check_path_file)
-export(find_extension)
 export(read_100)
-export(read_century_files)
+export(read_lis)
 export(read_schedule)
 export(read_site)
 export(read_weather)
