New function dirichlet_params.R to calculate Dirichlet distribution gammas. More work invested into the vignette on uncertainty and sensitivity (new name).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(century_run)
 export(check_overwrite)
 export(check_path_file)
+export(dirichlet_params)
 export(read_100)
 export(read_lis)
 export(read_schedule)
